# ai-debug-assistant

./: README.md  ai_service.py  auth.py  database.py  main.py  models.py  pyproject.toml
static/: style.css
templates/: index.html  login.html  register.html
